# Data-Onemine

./: .env.example  .gitignore  AGENTS.md  MTDataOnemine.spec  README.md  pyproject.toml
src/mtdataonemine/app/: main.py
src/mtdataonemine/config/: env_loader.py
src/mtdataonemine/db/: __init__.py  connections.py
src/mtdataonemine/models/: cartir.py
src/mtdataonemine/repositories/: calle_repo.py  cartir_repo.py  estado_repo.py  loopdata_repo.py  machines_repo.py  operators_repo.py  rssi_repo.py  zanjas_unique_repo.py
src/mtdataonemine/services/: calle_service.py  cartir_service.py  estado_service.py  loopdata_service.py  machines_service.py  network.py  operators_service.py  rssi_service.py  vnc.py  zanjas_unique_service.py
src/mtdataonemine/ui/: theme.py
src/mtdataonemine/ui/components/: layout.py  ping_panel.py  table.py
src/mtdataonemine/ui/tabs/: calle_view.py  cartir_view.py  estado_view.py  loopdata_view.py  operators_view.py  rssi_view.py  tags_view.py  zanjas_unique_view.py
src/mtdataonemine/utils/: cleanup.py  tz.py
